# axis_pose

./: .gitignore  CMakeLists.txt  LLM_PROMPT_SUMMARY.md  README.md  evaluate_3_methods.sh  evaluate_4_methods.sh  evaluate_just_run.sh  get_results.py  package.xml  patch.py  patch_pose.sh  patch_solve.py  visualize_apriltag.py
config/: d457_color.yaml  d457_depth.yaml  d555_color.yaml  d555_depth.yaml  param.yaml
docs/: AGENT_TODO_PROGRESS.md  ALGORITHMS_IMPLEMENTATION.md  ARCHITECTURE_AND_DEPENDENCIES.md  EVALUATE_SCRIPT_USAGE.md  LLM_PROMPT_SUMMARY.md
examples/: benchmark_example.cpp  experiments.yaml
include/axispose/: benchmark.hpp  ceres_joint_optimizer.hpp  debug_manager.hpp  depth_aligner.hpp  driver.hpp  gaussian_map_solver.hpp  joint_semantic_depth_preprocessor.hpp  logger.hpp  point_cloud_processor.hpp  poseEstimate.hpp  seg.hpp  visualization.hpp
jetson_version/: CMakeLists.txt
jetson_version/modules/plugin/common/: vfcCommon.cpp
jetson_version/modules/plugin/efficientIdxNMSPlugin/: efficientIdxNMSInference.cu  efficientIdxNMSInference.cuh
jetson_version/modules/plugin/efficientRotatedNMSPlugin/: efficientRotatedNMSInference.cu  efficientRotatedNMSInference.cuh
jetson_version/modules/trtyolo/core/: core.cpp
jetson_version/modules/trtyolo/infer/: backend.hpp
jetson_version/modules/trtyolo/utils/: common.hpp
launch/: launch.py  launch_ceres.py  launch_gaussian.py  launch_pca.py  launch_ransac.py
src/: ceres_joint_optimizer.cpp  depth_aligner.cpp  driver.cpp  evaluate_pipelines.cpp  gaussian_map_solver.cpp  joint_semantic_depth_preprocessor.cpp  point_cloud_processor.cpp  poseEstimate.cpp  seg.cpp  visualization.cpp
src_1/: poseEstimate.cpp  poseEstimate.hpp
src_1/src/axispose/: CMakeLists.txt  package.xml
src_1/src/axispose/include/axispose/: poseEstimate.hpp  seg.hpp  visualization.hpp
src_1/src/axispose/launch/: ros1_node.launch
src_1/src/axispose/src/: poseEstimate.cpp  seg.cpp
src_1/src/trtyolo/: tensorrt-yolo-config.cmake
src_ros1/src/axispose/: CMakeLists.txt  README_DEPLOY_ROS1.md
src_ros1/src/axispose/config/: camera_info.yaml
src_ros1/src/axispose/include/axispose/: benchmark.hpp  ceres_joint_optimizer.hpp  depth_aligner.hpp  driver.hpp  gaussian_map_solver.hpp  point_cloud_processor.hpp  poseEstimate.hpp  seg.hpp
src_ros1/src/axispose/launch/: ros1_node.launch
src_ros1/src/axispose/scripts/: pose_success_monitor.py  run_pose_algorithms_ros1.sh
src_ros1/src/axispose/src/: ceres_joint_optimizer.cpp  depth_aligner.cpp  driver.cpp  gaussian_map_solver.cpp  point_cloud_processor.cpp  poseEstimate.cpp  seg.cpp  visualization.cpp
tools/: README.md  apriltag.yaml  eval_config.yaml  eval_runner.py  evaluate.py  evaluate_line2d.py  experiment_runner.py  extract_groundtruth.py  gt_ingest.py  line2d_tag_residual.py  merge_metrics.py  offline_kalman_eval.py  plot_metrics.py  run.py  run_full_eval.sh  summarize_eval_results.py  visualize_three_lines.py
