<?xml version="1.0"?>
<package format="3">
  <name>axispose</name>
  <version>0.1.0</version>
  <description>Image processing node for depth and color image alignment</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport_plugins</depend>
  <depend>camera_info_manager</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
